# AtrFood

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  entrypoint.sh  pyproject.toml  requirements.txt  setup.cfg  stats.py
apps/administrative_staff/: admin.py  apps.py  models.py
apps/blog/: admin.py  models.py  serializers.py  translation.py  urls.py  views.py
apps/cart/: admin.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
apps/cart/migrations/: 0001_initial.py  0002_cartmodel_quantity_product.py  0003_cartmodel_sum.py  0004_rename_sum_cartmodel_sum_products.py  (+2 more)
apps/clients/: admin.py  models.py
apps/company_user/: admin.py  apps.py  models.py  serializers.py  services.py  translation.py  urls.py  validators.py  views.py
apps/document/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
apps/individual_user/: admin.py  apps.py  import_export_utils.py  models.py  serializers.py  services.py  translation.py  urls.py  views.py
apps/notes/: admin.py  models.py  views.py
apps/order/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
apps/payment/: admin.py  models.py  serializers.py  services.py  test_utils.py  urls.py  views.py
apps/product/: admin.py  filters.py  models.py  serializers.py  services.py  urls.py  views.py
apps/promotion/: admin.py  apps.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
apps/review/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
apps/tg_bot/: __init__.py  admin.py  apps.py  models.py  services.py  tg_client.py  validators.py  views.py
apps/user/: admin.py  models.py  serializers.py  services.py  tasks.py  translation.py  urls.py  user_manager.py  validators.py  views.py
config/: celery.py  general_permissions.py  settings.py  urls.py  utils.py
docker/deploy/: Dockerfile  docker-compose.yaml
docker/local/: Dockerfile  docker-compose.yaml
templates/admin/: base_site.html  change_list.html  note.html  statistics.html  to_pdf.html
(+111 files in other folders)
